# WASMExamples

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TODO  build.sh  build_multi.sh  clean.sh
AlignedPerformance/: CMakeLists.txt  CMakePresets.json  build.sh  build64_multi.sh  build_wasm.sh  random_float.cpp  random_lookup_dot_array.cpp  random_rw.cpp
Alignment/: .gitignore  Makefile  main.c  vector_lookup.c
Assertions/: AssertionTest.cxx  CMakeLists.txt  customAssertions.cxx
Benchmark/: CMakeLists.txt  build.sh
Benchmark/Pages/: CMakeLists.txt  benchmark.cpp
Canvas/: Makefile  example.cpp  index.html  run.js
EightQueen/: CMakeLists.txt  EightQueen.cxx  build.sh
Embind/Template/: CMakeLists.txt  CMakePresets.json  build_multi.sh  main.cpp  package.json  run.js  test.cpp
Extension/First/: CMakeLists.txt  base.cpp  base.h
Extension/Second/: CMakeLists.txt  derived.cpp  derived.h
IO/File0/: CMakeLists.txt  package-lock.json  test.sh
IO/File0/scripts/: run_wasm_test.js
IO/File0/src/: example.cpp
IO/File0/test_files/: expected_output.json
IO/File1/: CMakeLists.txt  build.sh
IO/File1/scripts/: run_wasm_test.js  run_wasm_test_file.js
IO/File2/: package-lock.json  test.sh  test_file.sh
IO/File2/src/: example.cpp
IO/File2/test_files/: expected_output.json
InlineFFT/: CMakeLists.txt  CMakePresets.json  fft.cxx
LinkOrder/: Makefile  README.md  derived.cpp  derived.h  factory_and_base.cpp  factory_and_base.h  main.cpp
Mangling/: Makefile  mylib.cpp  test.js
Pong/: .gitattributes  CMakeLists.txt  CMakePresets.json  pong.cpp
QuickSort/: CMakeLists.txt  CMakePresets.json  QuickSort.cxx  build_multi.sh
REPL/: README.md  test.js  utils.js  webgl-repl.js
RandomWrite/: CMakeLists.txt  build.sh  build_wasm.sh  random_lookup_dot.cpp  random_lookup_dot_array.cpp
STDThread/: CMakeLists.txt  TransformThread.cxx  build_multi.sh
Share/: CMakeLists.txt
Share/ShareVTKTypes/: CMakeLists.txt  First.cxx  Second.cxx
Share/ShareViaHost/: CMakeLists.txt
Share/SharedHeap/: CMakeLists.txt  index.html
Share/two-modules-shared-mem/src/: build.sh
ShareData/: .gitignore  Makefile  TODO  index.html  module1.cpp  module2.cpp  run.js
ShareMemory/: Makefile  main.js  module1.cpp  module2.cpp  package-lock.json  package.json
ShareMemory/TwoModules/: build.sh  main.js  module1.cpp  module1Loader.js  module2.cpp  module2Loader.js  module3.cpp  module3Loader.js  module4.cpp  module4Loader.js  package-lock.json  package.json  sharedMemory.js
ShareTypes/: CMakeLists.txt  CMakePresets.json  First.cxx  First.h  First.ld  Makefile  Second.cxx  Second.ld  Types.cxx  Types.h  build.sh  package.json  run.js  runc.js  runcpp.js  runshared.js
SideModule/: CMakeLists.txt  test.js
SideModule/CMake/: EmscriptenSettings.cmake
SideModule/CPP/: CMakeLists.txt  CMakePresets.json  CPPSideModuleTest.cxx  build.sh  build_multi.sh  run_CPPSideModuleTest.js  side.cxx  side.h
SideModule/ES6/: CMakeLists.txt  CMakePresets.json  ES6Test.cxx  EmscriptenSettings.cmake  build.sh  clean.sh  multi_build.sh  run_ES6Test.js  side.c  side.h
SideModule/Simple/: Makefile  index.html  main.c  side.c  side.h
SideModule/VTK/: CMakeLists.txt  CMakePresets.json  README.md  abi.h  array.hpp  array2.hpp  arrayTest.cpp  arrayTest2.cpp  array_abi.cxx  array_abi.h  array_abi.json  build_multi.sh  host.cxx  host_array.cxx  run_SideModuleTest.js  side_abi.cxx  side_abi.h  side_array_abi.cxx  side_array_abi.h  vector_abi.cxx  vector_abi.h
SideModule/libtypes/: types.cpp  types.h
SideModule/module1/: module1.cpp
SideModule/module2/: module2.cpp
Stdio/: CMakeLists.txt  example.c  stdio.js
StdioDyn2/: CMakeLists.txt  build.sh  clean.sh  example.cpp  package-lock.json  package.json  stdio.js
StdioDynamic/: CMakeLists.txt  example.cpp  package.json  stdio.js  works.cpp
StdioFixed/: CMakeLists.txt  example.c  stdio.js
ThreadCallback/: Almost.cxx  CMakeLists.txt  ES6Callback.cxx  JSCallback.cxx  JSCallbackThreadDetached.cxx  JSCallbackThreadJoinable.cxx  JSCallbackThreadValIssue.cxx  SimpleCallback.cxx  VTKCallback.cxx  build.sh  main.cjs  main.cxx  run_ES6CallbackTest.js  run_JSCallbackTest.js  run_JSCallbackThreadDetachedTest.js  run_JSCallbackThreadJoinableTest.js  worker.cjs
ThreadCallback/Joinable/: CMakeLists.txt  CMakePresets.json  JSCallbackThreadJoinable.cxx  package.json
Threading/: CMakeLists.txt  CMakePresets.json  Old.txt  build.sh  config.h.in  index.html  library.cxx  library.h  main.cxx  package.json  run_Catch2Test.js  test.cxx
Threading/Dynamic/: pool.cpp
Threading/Recreate/: CMakeLists.txt  build.sh  main.c
Threading/SimpleCreate/: Makefile  main.cpp
Threads/: .gitignore  Makefile  example.c
TwoWorkers/: CMakeLists.txt  README.md  build.sh  main.cxx  main.js  package-lock.json  package.json  worker.js
VSCodeDebug/: CMakeLists.txt  CMakePresets.json  README.md  build.sh  experience.txt
VSCodeDebug/ES6/: CMakeLists.txt  CMakePresets.json  README.md  Simple.cxx  build.sh  index.html  launch_browser.sh  launch_chrome.sh  mapping.txt  package-lock.json  package.json  run_ES6.js  serverManager.cjs
VSCodeDebug/Web/: CMakeLists.txt  CMakePresets.json  README.md  build.sh  hello.c  open_browser.sh
VSCodeDebug/project/: index.html  serverManager.js
WIT/: Makefile  main.rust  module_a.cpp  module_b.cpp  run.js  shared.wit
WebGL/: .gitignore  Makefile  example.cpp
WebGL2/: Makefile  index.html  main.cpp  webgl_timer.cpp
WebWorker/: add.c  index.html  package.json
WebWorker/Single/: Makefile  main.mjs  worker.mjs
WebWorker/Threading/: Makefile  mycode.c  worker.mjs
WebWorker/ThreadingCPP/: CMakeLists.txt  library.cpp  package-lock.json  package.json  worker.mjs
WebWorkerCPP/: index.html
base64/: Makefile  base64.wat  base64c.html
