cmake_minimum_required(VERSION 3.15)
project(WASMExamples)

include(CTest)
enable_testing()

list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/CMake)
include(spsAsan)
include(spsEmscriptenDefaults)
if (NOT DEFINED WASMExamples_DEBUG)
  sps_set_emscripten_defaults(${PROJECT_NAME})
endif()
include(spsEmscriptenSettings)

add_subdirectory(Embind/Template)
add_subdirectory(Threading)
add_subdirectory(EightQueen)
add_subdirectory(ShareTypes)
#add_subdirectory(Share/ShareViaHost)
#add_subdirectory(Share/SharedHeap)
add_subdirectory(ThreadCallback)
add_subdirectory(AlignedPerformance)
